Attempt to reset USB port if an error is encountered

--- a/config_example.json
+++ b/config_example.json
@@ -3,5 +3,6 @@
   "mongo_password": "",
   "mongo_host": "",
   "healthcheck_url": "",
-  "timezone": ""
+  "timezone": "",
+  "uhubctl_port": ""
 }
